<resources>
    <string name="app_name">EasyBet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Easy Bets</string>
    <string name="nav_header_subtitle">Custom username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bet_screen">Amount to Bet</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Wallet</string>
    <string name="create_room">Create Room</string>
    <string name="default_total">$0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bet">Bet</string>
    <string name ="condition">Enter Bet To Be Placed</string>
    <string name="bet_list">Bet List</string>
    <string name="email">Email</string>
    <string name="add_friend">Add Friend</string>
    <string name="account">Account</string>
    <string name="friends_list">Friends List</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="refresh">Refresh</string>
</resources>