<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/create_room" />
        <item
            android:id="@+id/bet_list"
            android:icon= "@drawable/rectangle"
            android:title="@string/bet_list"/>
        <item
            android:id="@+id/account"
            android:icon="@drawable/rectangle"
            android:title= "@string/account"/>
        <item
            android:id="@+id/friend_list"
            android:icon="@drawable/rectangle"
            android:title= "@string/friends_list"/>
    </group>
</menu>