<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cooper.android.easybet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.cooper.android.easybet.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_room"
        android:name="com.cooper.android.easybet.ui.slideshow.SlideshowFragment"
        android:label="@string/create_room"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id= "@+id/bet_list"
        android:name= "com.cooper.android.easybet.BetListFragment"
        android:label="Bet list"
        tools:layout="@layout/bet_list_layout"/>
</navigation>